syntax = "proto3";

package game;


service GameService {
  rpc CreateGame (CreateGameRequest) returns (CreateGameResponse) {}
  rpc FindOneGame (FindOneGameRequest) returns (FindOneGameResponse) {}
  rpc StartGame (StartGameRequest) returns (StartGameResponse) {}
  rpc AddUserToGame (AddUserToGameRequest) returns (AddUserToGameResponse) {}
  rpc ListAvailableGames (stream PaginationDto) returns (stream Games) {}
}


message Game {
  string id = 1;
  string name = 2;
  bool started = 4;
}

message CreateGameRequest {
  string name = 1;
  int32 maxMembers = 2;
  string status = 3;
  int32 creator = 4;
}

message CreateGameResponse {
  string name = 1;
  string status = 2;
} 

message FindOneGameRequest {
  string id = 1;
}

message FindOneGameResponse {
  string name = 1;
  string status = 2;
}

message StartGameRequest {
  string creator = 1;
}

message StartGameResponse {
  int32 id =1;
}

message AddUserToGameRequest {
  int32 userToBeAdded = 1;
  int32 gameId = 2;
  int32 creatorId = 3;
}

message AddUserToGameResponse {
  string name = 1;
  string status = 2;
}

message ListAvailableGamesRequest {

}

message ListAvailableGamesResponse {

}

message Games { 
  repeated Game games = 1;
}

message PaginationDto {
  int32 page = 1;
  int32 skip = 2;
}